--- a/style.css
+++ b/style.css
@@ -1,24 +1,25 @@
 p {
-    background-color: red;
-    margin: 0;
+  background-color: red;
+  margin: 0;
 }
 
-.introduction{
-    border: 5px solid brown;
-    color: rgb(43, 16, 16);
-    text-align: right;
-    font-size: 2rem;
+.introduction {
+  border: 5px solid brown;
+  color: rgb(43, 16, 16);
+  text-align: right;
+  font-size: 2rem;
 }
 
-.mainPart{
-    font-size: 20px;
-    font-weight: bold;
-    color: grey;
-    text-align: right;
+.mainPart {
+  font-size: 20px;
+  font-weight: bold;
+  color: grey;
+  text-align: right;
 }
 
-.ending{
-    background-color: lightsalmon;
-    padding-top: 20px;
-    text-align: right;
+.ending {
+  background-color: lightsalmon;
+  padding-top: 20px;
+  text-align: right;
+  border-color: aqua;
 }
